Remove references to sun.* packages.
For #48.