@@ -10,6 +10,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Random;
 
+import net.tootallnate.websocket.Base64;
 import net.tootallnate.websocket.Draft;
 import net.tootallnate.websocket.FrameBuilder;
 import net.tootallnate.websocket.Framedata;
@@ -18,7 +19,6 @@ import net.tootallnate.websocket.FramedataImpl1;
 import net.tootallnate.websocket.HandshakeBuilder;
 import net.tootallnate.websocket.Handshakedata;
 import net.tootallnate.websocket.exeptions.InvalidHandshakeException;
-import sun.misc.BASE64Encoder;
 
 
 public class Draft_10 extends Draft {
@@ -247,7 +247,7 @@ public class Draft_10 extends Draft {
 		
 		byte[] random = new byte[16];
 		new Random().nextBytes( random );
-		request.put( "Sec-WebSocket-Key" , new BASE64Encoder ().encode ( random ) );
+		request.put( "Sec-WebSocket-Key" , Base64.encodeBytes( random ) );
 		
 		return request;
 	}
@@ -310,7 +310,7 @@ public class Draft_10 extends Draft {
 		} catch ( NoSuchAlgorithmException e ) {
 			throw new RuntimeException ( e );
 		}
-		return new BASE64Encoder ().encode ( sh1.digest ( acc.getBytes () ) );
+		return Base64.encodeBytes( sh1.digest ( acc.getBytes () ) );
 	}
 	private byte[] toByteArray( long val, int bytecount ){
         byte[] buffer = new byte[bytecount];
